Added more details for constants